--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: Modernist theme
-description: Modernist is a theme for GitHub Pages.
+title: UltimateBungeeModeration
+description: A plugin to make server management easier.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-modernist
