--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     </repositories>
 
     <build>
+        <defaultGoal>clean package javadoc:javadoc</defaultGoal>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -43,6 +44,14 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <show>public</show>
                 </configuration>
             </plugin>
         </plugins>
